# UNNDeepLearning_Dummy

./: CMakeLists.txt  NNetwork.cpp  NNetwork.h  Otchet_glubokoe_obuchenie_1_-_Sakharov.docx  README.md  Utils.h  main.cpp  typedefs.h
test/: vec_test.cpp
